--- a/Cross-ValidationInClassHO2.Rmd
+++ b/Cross-ValidationInClassHO2.Rmd
@@ -1,15 +1,17 @@
 ---
-title: "Cross-Validation"
+title: "Cross-Validation Hand Out"
 author: "Alan Arnholt"
-date: 'Last Updated on: `r format(Sys.time(), "%B %d, %Y at %X")`'
+date: 'Last knit on: `r format(Sys.time(), "%B %d, %Y at %X")`'
 bibliography: CV.bib
-output: bookdown::html_document2
+output: 
+  bookdown::html_document2: 
+    highlight: textmate
+    theme: yeti
 ---
 
 ```{r, label = "SETUP", echo = FALSE, results= 'hide', message = FALSE, warning = FALSE}
-set.seed(389)
 library(knitr)
-knitr::opts_chunk$set(fig.show = 'as.is', fig.height = 4, fig.width = 4, prompt = FALSE, highlight = TRUE, tidy = FALSE, warning = FALSE, message = FALSE, fig.align = "center", comment = NA)
+knitr::opts_chunk$set(fig.show = 'as.is', fig.height = 4, fig.width = 4, prompt = FALSE, highlight = TRUE, tidy = FALSE, warning = FALSE, message = FALSE, fig.align = "center", comment = NA, tidy.opts=list(blank = TRUE, width.cutoff= 75, cache = TRUE))
 ```
 
 # Cross-Validation Handout 
@@ -48,7 +50,7 @@ The MSPE is computed with each testing set resulting in $n$ values of MSPE. The 
 
 ## $k$-Fold Cross Validation
 
-$k$-fold cross-validation is similar to LOOCV in that the available data is split into training sets and testing sets; however, instead of creating $n$ different training and testing sets, $k$ folds/groups of training and testing sets are created where $k < n$ and each fold consists of roughly $n/k$ values in the testing set and $1 - n/k$ values in the training set. Figure \@ref(fig:KFCV) shows a schematic display of 5-fold cross-validation. The lightly shaded rectangles are the testing sets and the darker shaded rectangles are the training sets. 
+$k$-fold cross-validation is similar to LOOCV in that the available data is split into training sets and testing sets; however, instead of creating $n$ different training and testing sets, $k$ folds/groups of training and testing sets are created where $k < n$ and each fold consists of roughly $n/k$ values in the testing set and $n - n/k$ values in the training set. Figure \@ref(fig:KFCV) shows a schematic display of 5-fold cross-validation. The lightly shaded rectangles are the testing sets and the darker shaded rectangles are the training sets. 
 
 ```{r, label = "KFCV", echo = FALSE, fig.cap = "Five fold cross-validation"}
 knitr::include_graphics("./PNG/cv.png", dpi = 96)
@@ -68,7 +70,7 @@ Note that LOOCV is a special case of $k$-fold cross-validation where $k$ is set 
 
 
 ```{r label = "somedata"}
-set.seed(357)
+set.seed(24)
 n <- 1000           # Number of observations to generate
 SD <- 0.5
 xs <- sort(runif(n, 5, 9))
@@ -87,10 +89,9 @@ datatable(DF)
 ```{r}
 n <- nrow(DF)
 train <- sample(n, floor(0.75 * n), replace = FALSE)
+train <- sort(train) 
 trainSET <- DF[train, ]
-trainSET <- trainSET[order(trainSET$x), ]
 testSET <- DF[-train, ]
-testSET <- testSET[order(testSET$x), ]
 dim(trainSET)
 dim(testSET)
 ```
@@ -128,7 +129,7 @@ MSPEtest <- mean((testSET$y - yhtest)^2)
 MSPEtest
 ```
 
-## Fit a cubic model
+## Fit a cubic model.
 
 ```{r}
 # Base R
@@ -170,7 +171,7 @@ MSPEtest
 
 ```{r}
 # Your code here
-#
+library(PASWR2)
 #
 #
 #
@@ -259,7 +260,6 @@ ggplot(data = DF2, aes(x = x, y = MSPE)) +
 #
 #
 #
-#
 ```
 
 
@@ -275,6 +275,8 @@ k <- 5
 MSPE <- numeric(k)
 folds <- sample(x = 1:k, size = nrow(DF), replace = TRUE)
 xtabs(~folds)
+# or
+table(folds)
 sum(xtabs(~folds))
 for(j in 1:k){
   modq <- lm(y ~ poly(x, 2, raw = TRUE), data = DF[folds != j, ])
@@ -308,10 +310,10 @@ model
 
 ```{r}
 # Your code here
-#
-#
-#
-#
+set.seed(13)
+k <- 8
+MSPE <- numeric(k)
+folds <- sample(x = 1:k, size = nrow(HSWRESTLER), replace = TRUE)
 #
 #
 #
@@ -326,16 +328,16 @@ model
 ### Using `caret`
 
 ```{r}
-library(PASWR2)
 model <- train(
   form = hwfat ~ abs + triceps,
   data = HSWRESTLER,
   method = "lm",
   trControl = trainControl(
-    method = "cv", number = 5
+    method = "cv", number = 8
   )
 )  
-model  
+model
+model$results$RMSE^2
 ```
 
 
@@ -357,15 +359,14 @@ cv.err
 
 ```{r}
 # Your code here
-#
-#
+glm.fit <- glm(hwfat ~ abs + triceps, data = HSWRESTLER)
 #
 #
 ```
-
 *  Use `caret` and compare answers.
 
 ```{r}
+# Your Code Here
 #
 #
 #
@@ -389,17 +390,17 @@ plot(1:10, type ="n", xlab = "Degree of Polynomial", ylim = c(16, 26),
 k <- 10 # number of folds
 MSPE <- numeric(k)
 cv <- numeric(k)
-  for(i in 1:10){
-    folds <- sample(x = 1:k, size = nrow(Auto), replace = TRUE)
-    for(j in 1:k){
-      mod <- lm(mpg ~ poly(horsepower, i, raw = TRUE), data = Auto[folds != j, ])
-      pred <- predict(mod, newdata = Auto[folds ==j, ])
-      MSPE[j] <- mean((Auto[folds == j, ]$mpg - pred)^2) 
-    }
-    cv[i] <- weighted.mean(MSPE, table(folds)/sum(folds))
-  }
-  lines(1:10, cv, col = "red")
-  points(1:10, cv, col = "red", pch = 19)
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
 ```
 
 
@@ -407,12 +408,12 @@ cv <- numeric(k)
 
 ```{r}
 # Your Code Here
-#
-#
-#
-#
-#
-#
+set.seed(123)
+plot(1:10, type ="n", xlab = "Degree of Polynomial", ylim = c(16, 26), 
+     ylab = "Mean Squared Prediction Error", main = "10-fold CV") 
+k <- 10      # number of folds
+MSPE <- numeric(k)
+cv <- numeric(k)
 #
 #
 #
@@ -427,10 +428,10 @@ cv <- numeric(k)
 #
 #
 ## GGplot2 approach
-#
-#
-#
-#
+set.seed(123)
+cv <- matrix(NA, 10, 9)
+k <- 10      # number of folds
+MSPE <- numeric(k)
 #
 #
 #
@@ -457,7 +458,8 @@ cv <- numeric(k)
 
 ```{r}
 # Your Code Here
-#
+plot(1:10, type ="n", xlab = "Degree of Polynomial", ylim = c(16, 26), 
+     ylab = "Mean Squared Prediction Error", main = "10-fold CV") 
 #
 #
 #
@@ -468,7 +470,7 @@ cv <- numeric(k)
 #
 #
 # GGplot2 approach
-#
+cv.err <- matrix(NA, 10, 9)
 #
 #
 #
@@ -510,9 +512,9 @@ mean(MSPE)
 
 ```{r}
 # Your Code Here
-#
-#
-#
+set.seed(1)
+k <- nrow(HSWRESTLER)
+MSPE <- numeric(k)
 #
 #
 #
@@ -540,7 +542,7 @@ CVn
 
 ```{r}
 # Your Code Here
-#
+modf <- lm(hwfat ~ abs + triceps, data = HSWRESTLER)
 #
 #
 #
@@ -566,7 +568,7 @@ cv.err
 
 ```{r}
 # Your Code Here
-#
+glm.fit <- glm(hwfat ~ abs + triceps, data = HSWRESTLER)
 #
 #
 ```
@@ -578,10 +580,11 @@ cv.err
 
 ```{r}
 # Your Code Here
-#
-#
-#
-#
+plot(1:10, type ="n", xlab = "Degree of Polynomial", ylim = c(16, 26), 
+     ylab = "Mean Squared Prediction Error") 
+k <- nrow(Auto) # number of folds
+MSPE <- numeric(k)
+cv <- numeric(10)
 #
 #
 #
@@ -600,9 +603,9 @@ Using the short cut formula:
 
 ```{r}
 # Your Code Here
-#
-#
-#
+plot(1:10, type ="n", xlab = "Degree of Polynomial", ylim = c(16, 26), 
+     ylab = "Mean Squared Prediction Error")
+cv <- numeric(10)
 #
 #
 #
@@ -612,5 +615,8 @@ Using the short cut formula:
 #
 ```
 
+_________________
+
 
 ## References
+
